# cpp-catalog

./: .gitignore  .vimrc  README.rst  c++-catalog.code-workspace
ansi/: .base.cc.swp  .base.h.swp  .colours.h.swp  .format.cc.swp  .format.h.swp  .other_styles.cc.swp  .other_styles.h.swp  .reset.h.swp  CMakeLists.txt  README.rst  base.cc  base.h  colours.h  custom.cc  custom.h  format.cc  format.h  format.hpp  main.c  other_styles.h  reset.h
ansi/examples/: CMakeLists.txt  main.cc
ansi/include/: ansi.h
ansi/lib/: CMakeLists.txt  base.cc  base.h  colours.h  custom.cc  custom.h  format.c  format.cc  format.h  format.hpp  other_styles.h  reset.h
simple-projects/simple-calc/: CMakeLists.txt  main  main.cc  simple-calc.vim
